gccida/c0/ix86_expand_setcc
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_setcc/src/i386.c:8430:25: error: must use 'enum' tag to refer to type 'rtx_code'
int  ix86_expand_setcc( rtx_code code, rtx dest) 
                        ^
                        enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_setcc/src/i386.c:8444:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code codea; // [rsp+48h] [rbp-8h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_setcc/src/i386.c:8469:76: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
*( _DWORD *)test = ( unsigned __int16)reverse_condition_maybe_unordered( ( rtx_code)( unsigned __int16)*( _DWORD *)bypass_test) | *( _DWORD *)test & 0xFFFF0000; 
                                                                           ^~~~~~~~
                                                                           rtx_cost
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_setcc/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_setcc/src/i386.c:8469:87: error: expected expression
*( _DWORD *)test = ( unsigned __int16)reverse_condition_maybe_unordered( ( rtx_code)( unsigned __int16)*( _DWORD *)bypass_test) | *( _DWORD *)test & 0xFFFF0000; 
                                                                                      ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_setcc/src/obj/i386.o] Error 1
